[tool.poetry]
name = "remote"
version = "0.1.0"
description = "Easily enter known remote PCs (via rdesktop)"
authors = ["hendrik.huyskens"]

[tool.poetry.dependencies]
python = "^3.7"
bullet = "^2.1.0"
typer = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
pyremote = "remote.remote:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

